add todo & fix chartData

--- a/todo.txt
+++ b/todo.txt
@@ -1,31 +1,4 @@
-history => @inject('routing')
-
-App/Layout.js => components/Layout/index.js
-
-../ => components/
-
-remove notification
-
-Headers' function => Observer + class
-
-editorConfig eslint config
-
-
-register
-
-fill form -> submit form -> send email to user -> click email's url -> complete register
-        keep form information                  ->                    write to user database        
-        temp save to database
-        form = {
-            username: 'a',
-            password: 'b'
-        }
-
-        form = {
-            username: 'a',
-            password: 'ALSKJDHSLAKDJLKSAJDLKJOWIUE'
-        }
-
-setState => @observable
-
-拆分 Data/Quality/index.js
+Experience optimization:
+Deploy List page add issue detail
+model result page add animation on current selected model infomation when current selected model changed
+Advanced View add loading animation
