update distributed upload & download

--- a/todo.txt
+++ b/todo.txt
@@ -2,3 +2,6 @@ Experience optimization:
 Deploy List page add issue detail
 model result page add animation on current selected model infomation when current selected model changed
 Advanced View add loading animation
+
+Program:
+Distributed Upload(base in python return path)
